--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "@ionic/angular": "^4.7.1",
     "cordova-plugin-facebook4": "^6.2.0",
     "core-js": "^2.5.4",
-    "firebase": "^7.3.0",
+    "firebase": "^7.15.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-angular": "^0.901.9",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
